# sme-back

./: README.md  pyproject.toml
inf/: Dockerfile  ch.sql  db.sql  docker-compose.dev.yml
inf/clickhouse/: config.xml
src/: app.py  config.py
src/cli/: calculate_predictions.py  import_stock_price_data.py
src/communication/cli/: calculate_predictions.py  import_stock_price_data_from_kaggle.py  import_stock_price_data_from_yfinance.py
src/communication/http/: authentication.py  experiments.py  models.py  stocks.py  users.py
src/domain/: authentication.py  data_preprocessor.py  learning.py  regression.py  stock_data_loader.py
src/persistence/: model_storage.py
src/persistence/clickhouse/: stock_price_data_storage.py
src/persistence/postgres/: db.py  models.py
test/: conftest.py  factories.py
test/communication/: authentication_test.py  experiments_test.py
test/domain/: regression_test.py
